// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean.php 1`] = `
<?php
$true = true;
$false = false;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$true = true;
$false = false;

`;

exports[`single.php 1`] = `
<?php
true;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
true;

`;
